--- a/src/components/index/accountList/index.scss
+++ b/src/components/index/accountList/index.scss
@@ -23,11 +23,8 @@
       display: flex;
       align-items: center;
       padding: 10px 0;
-      View {
-        padding: 0 10px;
-      }
       .money {
-        color: gray;
+        font-family: "Google Sans";
       }
     }
   }
