--- a/src/components/index/accountList/index.scss
+++ b/src/components/index/accountList/index.scss
@@ -20,11 +20,41 @@
     transition: all all ease-in-out 0.8s;
     overflow: hidden;
     .list-item {
-      display: flex;
-      align-items: center;
       padding: 10px 0;
+      display: flex;
+      position: relative;
+      View {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        .content {
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+        }
+        &.left {
+          flex-direction: row-reverse;
+          text-align: right;
+          padding-right: 40px;
+        }
+        &.right {
+          padding-left: 40px;
+        }
+      }
       .money {
         font-family: "Google Sans";
+      }
+      .icon {
+        position: absolute;
+        background-color: white;
+        border: 1px solid #557cf1;
+        border-radius: 50%;
+        padding: 5px 10px;
+        color: #557cf1;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
   }
