--- a/src/components/index/accountList/index.scss
+++ b/src/components/index/accountList/index.scss
@@ -2,10 +2,14 @@
 
 .list {
   .list-title {
+    // background-color: #f0f0f0;
+    border-top: 1px solid #000;
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
     align-items: center;
+    font-size: 26px;
+    color: #666;
     .iconfont {
       margin-left: 10px;
       transform: rotate(-90deg);
@@ -25,21 +29,21 @@
       position: relative;
       View {
         width: 50%;
-        display: flex;
+        // display: flex;
         align-items: center;
         .content {
-          text-overflow: ellipsis;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
+          // text-overflow: ellipsis;
+          // display: -webkit-box;
+          // -webkit-line-clamp: 2;
+          // -webkit-box-orient: vertical;
         }
         &.left {
-          flex-direction: row-reverse;
-          text-align: right;
-          padding-right: 40px;
+          // flex-direction: row-reverse;
+          // text-align: right;
+          padding-right: 20px;
         }
         &.right {
-          padding-left: 40px;
+          padding-left: 20px;
         }
       }
       .money {
