--- a/src/components/index/accountList/index.scss
+++ b/src/components/index/accountList/index.scss
@@ -1,7 +1,9 @@
 @import url("../../../assets/iconfont.css");
 
 .list {
-  .list-title {
+  .list-month-title {
+  }
+  .list-day-title {
     // background-color: #f0f0f0;
     border-top: 1px solid #000;
     display: flex;
@@ -28,23 +30,10 @@
       display: flex;
       position: relative;
       View {
-        width: 50%;
-        // display: flex;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
-        .content {
-          // text-overflow: ellipsis;
-          // display: -webkit-box;
-          // -webkit-line-clamp: 2;
-          // -webkit-box-orient: vertical;
-        }
-        &.left {
-          // flex-direction: row-reverse;
-          // text-align: right;
-          padding-right: 20px;
-        }
-        &.right {
-          padding-left: 20px;
-        }
+        width: 100%;
       }
       .money {
         font-family: "Google Sans";
