解决弹窗弹出来的时候input不聚焦的问题

--- a/src/components/index/addPopups/index.scss
+++ b/src/components/index/addPopups/index.scss
@@ -40,6 +40,12 @@
         color: gray;
         border: 1px solid gray;
       }
+      Switch {
+        transform: scale(0.8);
+        &.red {
+          color: red;
+        }
+      }
     }
   }
 }
