--- a/src/components/index/addPopups/index.scss
+++ b/src/components/index/addPopups/index.scss
@@ -9,7 +9,7 @@
   visibility: hidden;
   &.show {
     visibility: visible;
-    background-color: #3333;
+    background-color: #4444;
   }
   &.show .popups {
     transform: translateY(0);
@@ -22,25 +22,44 @@
     width: 100vw;
     background-color: #ddd;
     border-radius: 40px 40px 0 0;
-    input {
-      margin: 20px;
-      padding: 0 20px;
+    .input-box {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      input {
+        margin: 20px;
+        margin-right: 0;
+        padding: 0 20px;
+        padding-right: 0;
+        flex-grow: 1;
+      }
+      .iconfont {
+        color: #557cf1;
+        padding-left: 20px;
+        padding-right: 40px;
+        font-size: 44px;
+        display: inline-block;
+        height: 100%;
+      }
     }
     .input-list {
       display: flex;
       flex-wrap: wrap;
+      margin: 0 10px;
       View {
-        border: 1px solid #557cf1;
+        // border: 1px solid #557cf1;
         color: #557cf1;
-        border-radius: 10px;
-        padding: 10px 20px;
+        // border-radius: 10px;
+        // padding: 10px 20px;
+        font-size: 52px;
         margin: 10px;
       }
       .gray {
         color: gray;
-        border: 1px solid gray;
+        // border: 1px solid gray;
       }
       Switch {
+        align-self: center;
         transform: scale(0.8);
         &.red {
           color: red;
